<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/conversation_details_title_options"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <EditText
                android:id="@+id/conversation_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/conversation_details_hint_group_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true"
                />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/conversation_details_switch_show_notifications"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Switch
                android:id="@+id/show_notifications_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <Button
            android:id="@+id/leave_button"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/conversation_details_button_leave_group"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/atlas_view_divider"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/conversation_details_title_participants"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/participants"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/add_participant_button"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/conversation_details_button_add_participants"
            android:visibility="gone"
            />
    </LinearLayout>
</ScrollView>
